# FaceCluster

./: .gitignore  PRD.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ncnn_bridge.c
assets/models/: mobilefacenet.param  scrfd_500m.param  scrfd_500m.tflite
docs/: technical-notes.md  technical_design.md
ios/: Podfile
ios/NcnnBridge/: NcnnBridge.podspec  ncnn_bridge.c
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: database.dart  database.g.dart
lib/screens/: benchmark_screen.dart  home_screen.dart  main_shell.dart  person_detail_screen.dart  photo_selection_screen.dart  results_screen.dart
lib/services/: benchmark_service.dart  clustering_service.dart  embedding_service.dart  face_detection_service.dart  perf_stats.dart  processing_service.dart  scrfd_service.dart
lib/services/inference/: backend_registry.dart  face_detector.dart  face_embedder.dart
lib/widgets/: face_bbox_painter.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
openspec/changes/face-cluster-app/: design.md  proposal.md  tasks.md
openspec/changes/switch-to-insightface/: design.md  proposal.md  tasks.md
scripts/: convert_model.py  test_pipeline.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
